# MathForge

./: AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  PROJECT_SPEC.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
app/: __init__.py  controls.py  downloads.py  generation_context.py  main.py  presets.py  rendering.py
docs/: ADDING_TOPICS.md  MANUAL_QA.md
examples/: README.md  factoring_techniques_hard_worksheet.md  factoring_techniques_medium_worksheet.md  factoring_techniques_worksheet.html  factoring_techniques_worksheet.md  functions_basics_hard_worksheet.md  functions_basics_medium_worksheet.md  functions_basics_worksheet.html  functions_basics_worksheet.md  linear_equations_hard_worksheet.md  linear_equations_medium_worksheet.md  linear_equations_resource_pack.html  linear_equations_resource_pack.md  linear_equations_resource_pack_libguides.html  linear_equations_sample.html  linear_equations_sample.md  linear_equations_worksheet.html  linear_equations_worksheet.md  linear_equations_worksheet_libguides.html  quadratic_equations_by_factoring_hard_worksheet.md  quadratic_equations_by_factoring_medium_worksheet.md  quadratic_equations_by_factoring_worksheet.html  quadratic_equations_by_factoring_worksheet.md  systems_of_linear_equations_hard_worksheet.md  systems_of_linear_equations_medium_worksheet.md  systems_of_linear_equations_worksheet.html  systems_of_linear_equations_worksheet.md
exporters/: __init__.py  bundle_exporter.py  canvas_exporter.py  download_filenames.py  html_exporter.py  libguides_html_exporter.py  markdown_exporter.py
(+44 files in other folders)
