[project]
name = "mathforge"
version = "0.1.0"
description = "Open-source tooling for generating high-quality mathematics instructional materials."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "MathForge contributors" }
]
keywords = [
    "mathematics",
    "education",
    "worksheets",
    "streamlit",
    "sympy"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education"
]
dependencies = [
    "streamlit>=1.35",
    "sympy>=1.12"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.ruff]
line-length = 88
target-version = "py311"
